fix: sidebar overlaps content

--- a/src/styles/scss/side-bar.scss
+++ b/src/styles/scss/side-bar.scss
@@ -1,21 +1,27 @@
 .home-body {
-    width: 100%;
     height: 100vh;
     position: relative;
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+}
+
+.home-body__content {
+    flex: 1;
 }
 
 .side-bar {
-    position: absolute;
-    left: -100%;
-    width: 250px;
+    width: 200px;
     height: 100%;
     background-color: #24292e;
     color: rgb(202, 202, 202);
-    transition: left 0.5s linear;
-    z-index: 2;
+    margin-left: -200px;
+    transition: margin-left 0.4s ease-in-out;
 
     &-active {
-        left: 0;
+        display: block;
+        width: 200px;
+        margin-left: 0;
     }
 
     &__header {
